compilateurDeca/src/test/deca/context/valid/objet/passe1_2/test_redef_correcte.deca
//Test : Redéfinition correcte de la méthode equals héritée d'Object
class MyClass {
    boolean equals(Object other) {
        return true;
    }
}

{
    MyClass c = new MyClass();
    if (c.equals(c)) {
        println("Ok");
    }
}
