compilateurDeca/src/test/deca/context/invalid/objet/expressions/print_objet.deca
// Description:
//    Test de contexte : Affichage d'un objet
//
// Resultats:
//    Erreur contextuelle : Type A non supporté par print.
//
// Historique:
//    cree le 13/01/2026

class A {}
{
    A a = new A();
    println(a);
}